# project-templater

./: Cargo.toml  README.md
src/: actions.rs  cli.rs  config.rs  main.rs
